# mo-doc

./: .gitignore  CHANGELOG.md  INFORMATION_ARCHITECTURE_PLAN.md  INTELLIGENCE_MIGRATION_PLAN.md  Makefile  README.md  USAGE.md  pyproject.toml
_shared_theme/: conf_base.py
_shared_theme/_templates/: page.html
intelligence/: conf.py  db-instance.md  intro.md  monitoring.md
intelligence/Backup-Restore/: snapshot.md
intelligence/Charging/: coupons-management.md
intelligence/Data-Connect/: loading.md
intelligence/Events/: event.md
intelligence/Migrate-Data/: Load-S3.md
intelligence/Security/: about-privilege-management.md  private-link.md
intelligence_en/: conf.py
intelligence_en/Get-Started/: quickstart.md
intelligence_en/Overview/: matrixone-intelligence-introduction.md
matrixone/: Makefile  conf.py
matrixone-intelligence/: Makefile  conf.py
matrixone-intelligence/source/: _static  _templates
matrixone/getting-started/: index.md
matrixone/sql-reference/: index.md
matrixone_en/: _static  conf.py
matrixone_en/contribution-guide/: index.md
matrixone_en/deploy/: index.md
matrixone_en/develop/: index.md
matrixone_en/faqs/: deployment-faqs.md  product-faqs.md
matrixone_en/overview/: index.md
scripts/: build_picker.py  convert_admonitions.py  migrate_from_mkdocs.py  migrate_ia.py  migrate_ia_fixup.py  migrate_ia_intelligence.py  migrate_ia_intelligence_v2.py  migrate_ia_intelligence_v3.py  migrate_intelligence.py  translate_batch.py  translate_glossary.md
source/: index.md
source/deploy/: index.md
source_en/: conf.py  glossary.md
(+410 files in other folders)
