[project]
name = "matrixone-docs-demo"
version = "0.1.0"
description = "MatrixOne 文档站演示原型（Sphinx + Furo）"
requires-python = ">=3.11"
dependencies = [
    "sphinx>=7.3,<8",
    "furo>=2024.8.6",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "jieba>=0.42.1",
]
